# small-lm-training

./: .gitignore  README.md  power_warranty_gpu_fault_report.md  pyproject.toml
1-distilling-a-0-8b-tool-calling-agent/: 01_1_lfm2_5_8b_a1b_eval.ipynb  01_student_eval.ipynb  02_1_teacher_eval_gpt.ipynb  02_teacher_eval.ipynb  03_teacher_train_trajectories.ipynb  04_1_train_student_sft_trl_peft.ipynb  04_train_student_sft_mlx_lm.ipynb  05_eval_sft_student.ipynb  README.md  blog.md  eval_nestful.py  eval_sql_agent.py  eval_sql_agent_local.py  generate_sql_teacher_sft_rows.py  generate_teacher_sft_rows.py  prepare_nestful.py  serve_chatgpt_shim.py  setup_cuda_server.sh  train_mlx.py  train_trl.py  train_unsloth.py  utils.py
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  generators.baml  sql_agent.baml
common/: __init__.py  agents.py  chatgpt_subscription_shim.py  config.py  generation.py  liquid_format.py  mlflow_logging.py  mlx_resumable_lora.py  nestful.py  qwen_format.py  retail_eval.py  sft_rows.py  sql_agent.py  tau_runtime.py  teacher_backends.py  trace_stats.py  user_simulator.py
docs/: plan.md
outputs/: mlx_community_Qwen3_5_35B_A3B_4bit_bfcl_v4_multi_turn_base_eval_50_pass1.json  mlx_community_Qwen3_5_35B_A3B_4bit_bfcl_v4_multi_turn_base_eval_50_raw_pass1.json  mlx_community_Qwen3_5_35B_A3B_4bit_bfcl_v4_multi_turn_base_eval_50_raw_qwen_parser_v2_pass1.json
scripts/: probe_vllm_metal.py  serve_teacher_mlx.py  serve_teacher_mlx_raw.py
(+71 files in other folders)
