[project]
name = "distillation-blogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "litellm>=1.86.1",
    "mlx-lm>=0.31.3",
    "peft>=0.18.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "trl>=0.22.1",
]
