[project]
name = "distillation-blogs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "baml-py>=0.222.0",
    "datasets==4.3.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "litellm>=1.86.1",
    "mlx-lm>=0.31.3",
    "peft>=0.18.0",
    "torch==2.10.0",
    "transformers==5.5.0",
    "trl==0.24.0",
    "unsloth==2026.5.10",
]
